--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.32.1",
 		"express": "^4.19.2",
+		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
 		"nodemon": "^3.1.4",
 		"pg": "^8.12.0",
 		"postgres": "^3.4.4"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/body-parser": "^1.19.5",
 		"@types/compression": "^1.7.5",
 		"@types/cookie-parser": "^1.4.7",
 		"@types/cors": "^2.8.17",
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.21",
+		"@types/joi": "^17.2.3",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/pg": "^8.11.6",
 		"drizzle-kit": "^0.23.1",
 		"ts-node": "^10.9.2"
